crates/strider-analyze/tests/snapshots/v3__aarch64be__floats__f64_arith.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#88cc88", label=x0, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#88cc88", label=x1, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#88cc88", label=q0, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#88cc88", label=q1, fontcolor="#cccccc", fontsize=9];
  "6" [label="And:u128", shape=box, fillcolor="#2d2d2d"];
  "7" -> "6" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "8" -> "6" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "8" [label="const 0xffffffffffffffff:u128", shape=ellipse, fillcolor="#2d2d2d"];
  "7" [label="ZeroExtend\nu64 → u128", shape=box, fillcolor="#2d2d2d"];
  "9" -> "7" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "9" [label="bitcast\nf64 → u64", shape=box, fillcolor="#302018"];
  "10" -> "9" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "10" [label="Add:f64", shape=box, fillcolor="#1a3020"];
  "11" -> "10" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "12" -> "10" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "12" [label="const 1:f64", shape=ellipse, fillcolor="#1a3020"];
  "11" [label="bitcast\nu64 → f64", shape=box, fillcolor="#302018"];
  "13" -> "11" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "13" [label="Truncate\nu128 → u64", shape=box, fillcolor="#2d2d2d"];
  "14" -> "13" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "14" [label="init\nq0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="And:u128", shape=box, fillcolor="#2d2d2d"];
  "15" -> "5" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "16" -> "5" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "16" [label="const 0xffffffffffffffff:u128", shape=ellipse, fillcolor="#2d2d2d"];
  "15" [label="ZeroExtend\nu64 → u128", shape=box, fillcolor="#2d2d2d"];
  "17" -> "15" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "17" [label="bitcast\nf64 → u64", shape=box, fillcolor="#302018"];
  "18" -> "17" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "18" [label="Div:f64", shape=box, fillcolor="#1a3020"];
  "19" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "10" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "19" [label="Add:f64", shape=box, fillcolor="#1a3020"];
  "20" -> "19" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "21" -> "19" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "21" [label="Neg\nf64 → f64", shape=box, fillcolor="#1a3020"];
  "22" -> "21" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "22" [label="bitcast\nu64 → f64", shape=box, fillcolor="#302018"];
  "23" -> "22" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "23" [label="Truncate\nu128 → u64", shape=box, fillcolor="#2d2d2d"];
  "24" -> "23" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "24" [label="init\nq1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "20" [label="Mul:f64", shape=box, fillcolor="#1a3020"];
  "25" -> "20" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "11" -> "20" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "25" [label="Add:f64", shape=box, fillcolor="#1a3020"];
  "11" -> "25" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "22" -> "25" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "4" [label="init\nx1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "3" [label="init\nx0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "26" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "26" [label="StackStore u64\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "27" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v28" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v28" -> "26" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "23" -> "26" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "27" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "29" -> "27" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v30" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v30" -> "27" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "13" -> "27" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "29" [label="MemPartition[MemPartitionId(0)]", shape=trapezium, fillcolor="#3a1a4a"];
  "31" -> "29" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "31" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
